[MODFIN-162] Some fixes